packages/@aws-cdk-containers/ecs-service-extensions/test/custom-service-extension.integ.snapshot/aws-ecs-integ.template.json
{
 "Resources": {
  "productionenvironmentvpcAEB47DF7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1Subnet8D92C089": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1RouteTableAssociationA8117374": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
    }
   }
  },
  "productionenvironmentvpcPublicSubnet1DefaultRoute524C894D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   },
   "DependsOn": [
    "productionenvironmentvpcVPCGW1B428D07"
   ]
  },
  "productionenvironmentvpcPublicSubnet1EIP54BA88DB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "productionenvironmentvpcPublicSubnet1EIP54BA88DB",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2Subnet298E6C31": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2RouteTable842A68D7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2RouteTableAssociation0A7549F3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
    }
   }
  },
  "productionenvironmentvpcPublicSubnet2DefaultRoute92CD697D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   },
   "DependsOn": [
    "productionenvironmentvpcVPCGW1B428D07"
   ]
  },
  "productionenvironmentvpcPublicSubnet2EIP14CA46AA": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "productionenvironmentvpcPublicSubnet2EIP14CA46AA",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet1Subnet53F632E6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet1RouteTableAssociation8BA32463": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet1DefaultRouteFBB3DE6C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet2Subnet756FB93C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet2RouteTableAssociation09188261": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet2DefaultRoute5F9AB6C1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC"
    }
   }
  },
  "productionenvironmentvpcIGWE7C39890": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc"
     }
    ]
   }
  },
  "productionenvironmentvpcVPCGW1B428D07": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "InternetGatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   }
  },
  "productionenvironmentclusterC6599D2D": {
   "Type": "AWS::ECS::Cluster"
  },
  "nametaskdefinitionTaskRole50FE844E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "nametaskdefinition690762BB": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 1024,
      "Environment": [
       {
        "Name": "PORT",
        "Value": "80"
       }
      ],
      "Essential": true,
      "Image": "nathanpeck/name",
      "Memory": 2048,
      "Name": "app",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ],
      "Ulimits": [
       {
        "HardLimit": 1024000,
        "Name": "nofile",
        "SoftLimit": 1024000
       }
      ]
     }
    ],
    "Cpu": "1024",
    "Family": "awsecsintegnametaskdefinition0EA6A1A0",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "nametaskdefinitionTaskRole50FE844E",
      "Arn"
     ]
    }
   }
  },
  "nameserviceService8015C8D6": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "productionenvironmentclusterC6599D2D"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 10,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "nameserviceSecurityGroup33F4662C",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
       },
       {
        "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "nametaskdefinition690762BB"
    }
   }
  },
  "nameserviceSecurityGroup33F4662C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-integ/name-service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    }
   }
  },
  "nameserviceTaskCountTarget366C2B3A": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 20,
    "MinCapacity": 5,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "productionenvironmentclusterC6599D2D"
       },
       "/",
       {
        "Fn::GetAtt": [
         "nameserviceService8015C8D6",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":iam::",
       {
        "Ref": "AWS::AccountId"
       },
       ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
      ]
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   }
  },
  "nameserviceTaskCountTargetTargetCpuUtilization50E2840097": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "awsecsintegnameserviceTaskCountTargetTargetCpuUtilization508522EB56",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "nameserviceTaskCountTarget366C2B3A"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "ScaleInCooldown": 60,
     "ScaleOutCooldown": 60,
     "TargetValue": 50
    }
   }
  }
 }
}
